Added bid-available computation node.

--- a/bid-available/package.json
+++ b/bid-available/package.json
@@ -3,7 +3,8 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "buster": "*",
-      "eventemitter2": "*"
+     "async": ">= 0.1.15"
+    , "underscore": "*"
+    , "hook.io": "*"
   }
 }
