Reverted to using Express 2.5.11 because 3.0 was not working with SSL.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.0rc1"
+    "express": "2.5.11"
     , "jade": "*"
     , "request": "*"
     , "async": "*"
