--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "2.5.11"
+    , "node-foursquare-2": "*"
     , "jade": "*"
     , "request": "*"
     , "async": "*"
